--- a/package.json
+++ b/package.json
@@ -1,58 +1,68 @@
 {
-  "name": "@felipeflohr/flohr-common-logger",
-  "version": "1.0.0",
-  "description": "Logger used in my personal projects.",
-  "scripts": {
-    "test": "jest",
-    "compile": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FelipeFlohr/flohr-common-logger.git"
-  },
-  "keywords": [
-    "logger",
-    "node"
-  ],
-  "author": "Felipe Matheus Flohr",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/FelipeFlohr/flohr-common-logger/issues"
-  },
-  "homepage": "https://github.com/FelipeFlohr/flohr-common-logger#readme",
-  "devDependencies": {
-    "@types/eslint": "^8.21.1",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.36.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.0.5",
-    "typedoc": "^0.23.26",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@felipeflohr/flohr-common-utils": "^1.1.2"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ],
-    "transform": {
-      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+    "name": "@felipeflohr/flohr-common-logger",
+    "version": "1.0.0",
+    "description": "Logger used in my personal projects.",
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/@FelipeFlohr",
+        "access": "public"
     },
-    "transformIgnorePatterns": [
-      "node_modules/(?!variables/.*)"
-    ]
-  }
+    "scripts": {
+        "test": "jest",
+        "compile": "tsc && gulp",
+        "lint": "eslint --fix --ignore-path .gitignore --ext .js,.ts .",
+        "doc:generate": "typedoc --out docs lib/index.ts",
+        "publish:local": "npm run compile && cd dist && npm publish",
+        "prepublish:github": "npm run compile",
+        "publish:github": "npm publish"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/FelipeFlohr/flohr-common-logger.git"
+    },
+    "keywords": [
+        "logger",
+        "node"
+    ],
+    "author": "Felipe Matheus Flohr",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/FelipeFlohr/flohr-common-logger/issues"
+    },
+    "homepage": "https://github.com/FelipeFlohr/flohr-common-logger#readme",
+    "devDependencies": {
+        "@types/eslint": "^8.21.1",
+        "@types/jest": "^29.4.0",
+        "@types/node": "^18.15.0",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "eslint": "^8.36.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "glob": "^9.3.0",
+        "gulp": "^4.0.2",
+        "gulp-typescript": "^6.0.0-alpha.1",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.0.5",
+        "typedoc": "^0.23.26",
+        "typescript": "^4.9.5"
+    },
+    "dependencies": {
+        "@felipeflohr/flohr-common-utils": "^1.1.2"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testPathIgnorePatterns": [
+            "/node_modules/",
+            "/dist/"
+        ],
+        "transform": {
+            "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+        },
+        "transformIgnorePatterns": [
+            "node_modules/(?!variables/.*)"
+        ]
+    }
 }
