--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -18,7 +18,9 @@ jobs:
               with:
                   node-version: 16
             - run: npm ci
-
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
     publish-gpr:
         needs: build
         runs-on: ubuntu-latest
@@ -33,6 +35,9 @@ jobs:
                   registry-url: https://npm.pkg.github.com/
             - name: Node CI
               run: npm ci
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
             - name: Prepublish compile
               run: npm run prepublish:github
             - name: Publish
