--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,15 +25,21 @@ jobs:
             - name: Checkout repo using git
               uses: actions/checkout@v3
               with:
-                lfs: true
+                  lfs: true
 
             - name: Set up Node
               uses: actions/setup-node@v3
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
               with:
                   node-version: 16
 
             - name: Install Dependencies
               run: npm install
+              env:
+                  TOKEN: ${{secrets.TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
 
             - name: Add node_modules/.bin to PATH
               run: export PATH="./node_modules/.bin:$PATH"
